Check layout fixes on mobile + fix gallery+editor CSS

--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -1,11 +1,15 @@
 .gallery-section {
     display: grid;
     grid-template-rows: auto 1fr;
-    gap: 0.75rem;
+    gap: 0.5rem;
 
     min-height: 0;
     /*grid trick, allows section to shrink if Add MORE images to your gallery*/
     overflow: hidden;
+}
+
+.gallery-section h2 {
+    margin: 0;
 }
 
 .gallery-grid {
@@ -34,7 +38,7 @@
 
 @media (max-width: 768px) {
     .gallery-section {
-        max-height: 30vh;
+        max-height: 20vh;
     }
 
     .gallery-grid {
